docs/.vuepress/theme/styles/palette.styl
$navbarHeight = 4.375rem
$MQNarrow = 1199px
$MQMobile = 1023px
$sidebarWidth = 22.5rem
$contentWidth = 500px

////////// TYPE //////////
@font-face {
  font-family: "museosans";
  src: url("/fonts/MuseoSans_700-webfont.woff") format('woff');
  font-weight: 700;
}

@font-face {
  font-family: "museosans";
  src: url("/fonts/MuseoSans_500-webfont.woff") format('woff');
  font-weight: 500;
}

@font-face {
  font-family: "museosans";
  src: url("/fonts/MuseoSans_300-webfont.woff") format('woff');
  font-weight: 300;
}

@font-face {
  font-family: "museosans";
  src: url("/fonts/MuseoSans_100-webfont.woff") format('woff');
  font-weight: 100;
}

img
  text-align center

body
  font-family: museosans
  font-weight: 500
  color: #757575

h1
  color: #1976D2
  font-weight: 100
  font-size: 2.25rem
  padding-bottom: 1.375rem
  border-bottom: #F6F6F6 4px solid
  margin-bottom: 1.5rem !important

h2
  color: #09264a
  font-weight: 500
  font-size: 1.375rem
  padding-bottom: 1.375rem
  border-bottom: #F6F6F6 4px solid

h3
  color: #09264a
  font-weight: 500
  font-size: 1.25rem
  padding-bottom: 1.375rem

h4
  color: #09264a
  font-weight: 500
  font-size: 1.25rem
  padding-bottom: 1.375rem


////////// MAIN NAV //////////

.navbar
  background: url("/header-bg-grn-mb.svg") top right no-repeat #09264A
  background-size: 599px
  padding-left: 0 !important
  padding-right: 0 !important
  border-bottom: 0 !important
  height: 69px

  .logo
    margin-right: 0

  .navbar-inner
    .logo
      height: 2.5rem !important
      margin-top: 0.1875rem

    .sidebar-button
      width: 20px
      height: 20px
      padding: 20px
      top: 5px
      left: 0

      .icon
        color: #fff
        width: 20px
        height: 20px

  .links
    top: 0
    right: 1.5rem
    float: right
    position: relative !important

    .search-box
      padding-left: 0
      padding-right: 0
      margin-right: 0
      color: #09264a

    .search-box input
      left: 0 !important

.dropdown-wrapper .nav-dropdown .dropdown-item h4
  font-size: 1em !important
  font-weight: 700 !important

.links, .title
  background-color: transparent !important

.nav-links a:hover
  border-bottom: 0 !important
  color: #5ab552

.nav-links a:active
  font-size: 500 !important

a.router-link-active
  color: #5ab552

.home-link.router-link-active
  //color: #5AB552 !important
  //font-size: 1.25rem !important
  //font-weight: 300
  font-weight: 500
  padding-left: 60px

.dropdown-wrapper .dropdown-title .arrow
  margin-top: 8px !important

.dropdown-wrapper .dropdown-title
  color: #ccc !important

.dropdown-wrapper .dropdown-title:hover
  color: #5ab552

.home-link
  padding-left: 60px

.icon.outbound
  display: none !important

button.dropdown-title
  text-align: left

button.dropdown-title .title
  text-align: left

button.dropdown-title .title:hover
  color: #5ab552

.dropdown-wrapper button.dropdown-title .arrow
  margin-top: 8px !important
  float: right

.sidebar .nav-links .nav-item, .sidebar .nav-links a.nav-item
  font-size: 1em !important

.dropdown-wrapper .nav-dropdown .dropdown-item a.nav-link:hover
  color: #5ab552

////////// SIDEBAR //////////

:focus
  outline: 0 !important

.sidebar
  border-right: #F6F6F6 4px solid
  font-size: 1em
  top:69px
  padding-top:0

  .nav-item a.nav-link
    color: #ccc

  a.nav-link
    color: #ccc

  a.nav-link:hover
    color: #5ab552

  a.sidebar-heading.clickable:hover
    color: #5ab552

  h3.version
    padding:1rem 0 1rem 1.5rem

  h4
    color:#ccc

.sidebar-heading.clickable.active
  font-weight: 700

.sidebar-heading.clickable.router-link-active.open, .sidebar-heading.open
  font-weight: 700
  color: #0d47a1
  border-left: 0

p.sidebar-heading
  font-size: 1em

a.sidebar-link:hover
  color: #5ab552

a.sidebar-link:active
  font-weight: 700

.sidebar-heading:hover
  color: #5ab552

.sidebar-sub-headers a.sidebar-link
  padding-top: 0.35rem !important
  padding-bottom: 0.35rem !important

.sidebar .sidebar-links li
  margin-top: 0 !important

.sidebar-sub-headers a.active.sidebar-link
  font-weight: 700 !important

.sidebar .nav-links
  /*border-bottom: 4px solid #f6f6f6 !important*/
  background:#274060

//

.dropdown-item .nav-link.router-link-exact-active.router-link-active
  font-weight: 700 !important
  color: #fff !important
  background: url('/side-nav-marker.svg') left center no-repeat
  background-size: 10px

.dropdown-item a.nav-link.router-link-active
  font-weight: 700 !important
  color: #fff !important
  background: url('/side-nav-marker.svg') left center no-repeat
  background-size: 10px

.dropdown-wrapper .nav-dropdown .dropdown-item a.router-link-active::after
  content: none

@media (max-width: 1023px)
  .nav-link.router-link-exact-active.router-link-active
    font-weight: 700 !important
    color: #0d47a1

  .dropdown-wrapper .nav-dropdown .dropdown-item .dropdown-subitem
    padding-left: 1.35rem

@media (max-width: 1794px)
  .sidebar .sidebar-links
    margin-left: 1.5rem

  .sidebar .nav-links a
    font-weight: 500 !important

  button.dropdown-title .title
    font-weight: 500

  .dropdown-wrapper .nav-dropdown .dropdown-item h4
    font-size: 1em !important
    font-weight: 500 !important
    cursor: default

.sidebar .sidebar-links .sidebar-group-items
    margin-left: 0

.sidebar-heading
  padding-left: 0
  padding-right: 1.35rem
  border-left: 0

.sidebar-heading.clickable.active
  padding-left: 0
  border-left: 0

.sidebar-group a.sidebar-link
  padding-left: 20px
  margin-left: 0
  border-left: 0

.sidebar-sub-headers a.sidebar-link
  padding-left: 18px
  padding-top: 2px
  padding-bottom: 2px
  margin-left: 0
  border-left: #eee 2px solid

a.sidebar-link.active
  background: url('/side-nav-marker.svg') left center no-repeat
  background-size: 10px
  border-left: 0

.sidebar .sidebar-sub-headers
  padding-left: 20px
  margin-left: 0

  a.sidebar-link.active
    background: none
    border-left: 2px solid #5ab552

.sidebar ul.sidebar-sub-headers
  margin-top: 0.35rem
  margin-bottom: 0.35rem

.sidebar-group-items
  border-top: #F6F6F6 4px solid
  border-bottom: #F6F6F6 4px solid
  margin-right: 1.5rem !important
  margin-left: 20px

/*.sidebar-group-items li
  padding-top: 0.35rem*/

ul .sidebar-group-items
  padding-bottom: 0.35rem !important
  padding-top: 0.35rem !important
  margin-bottom: 0.35rem !important

a.sidebar-heading
  font-size: 1em

////////// BODY CONTENT //////////

.el-card
  margin-top: 1.9rem
  margin-bottom: 1.9rem

.custom-block-title
  font-size: 1.125rem
  background-repeat: no-repeat
  text-indent: 3.5rem
  margin-left: -2.95rem
  line-height: 2.5rem

.custom-block
  margin-top: 1.5rem !important
  margin-bottom: 1.5rem !important

.custom-block.warning
  background-color: #FEF1D1
  border-color: #F8B81B

  .custom-block-title
    color: #F8B81B
    background-image: url('/warning.svg')

.custom-block.tip
  background-color: #DEF0DC
  border-color: #5AB552

  .custom-block-title
    color: #5AB552
    background-image: url('/tip.svg')

.custom-block.danger .custom-block-title
  background-image: url('/danger.svg')

.custom-block.note
  background-color: #E7F3FE
  border-color: #2196F3

  .custom-block-title
    color: #2196F3

////////// TABLET //////////

@media (min-width: 1024px)
  .navbar
    background: url("/header-bg-grn-mb.svg") top right no-repeat, url("/header-bg-blu-tb.svg") top right no-repeat #09264A
    background-size: 599px, 1200px

  .home-link.router-link-active
    padding-left: 0

  .home-link
    margin-left: 1.5rem

  .search-box
    margin-left: 4.5rem

  .search-box .focused
    margin-left: -3rem

  a.nav-link
    color: #ccc

  a.nav-link:hover
    color: #5ab552 !important

  .dropdown-wrapper .dropdown-title
    color: #ccc

  .dropdown-wrapper .dropdown-title:hover
    color: #fff

  .links, .title

    .dropdown-wrapper .dropdown-title .arrow
      margin-top: 8px !important

  .sidebar a.repo-link
    display: none !important

  a.nav-link.router-link-active
    color: #fff !important

  .nav-item > a:not(.external).router-link-active
    border: none

  .links, .title

    .nav-links a:hover
      color: #fff

  .dropdown-wrapper .nav-dropdown .dropdown-item a
    color: #2c3e50

  .dropdown-item a.nav-link.router-link-active
    color: #0d47a1 !important

  .sidebar h3.version
    padding:1rem 1.35rem

  .dropdown-item .nav-link.router-link-exact-active.router-link-active
    color: #0d47a1 !important

  .dropdown-item a.nav-link.router-link-active
    color: #0d47a1 !important

////////// DESKTOP //////////

@media (min-width: 1200px)
  .nav-links .nav-item
    margin-left: 2rem

  .search-box
    margin-left: 4.5rem

  .search-box .focused
    margin-left: 0

  .navbar
    background: url("/header-bg-grn-tb.svg") top right no-repeat, url("/header-bg-blu-dt.svg") top right no-repeat #09264A
    background-size: 599px, 1200px

  .theme-default-content:not(.custom)
    padding-top: 4rem

////////// FULL DESKTOP //////////

@media (min-width: 1795px)
  .navbar .links
    right: calc(50% - 800px)

  .home-link
    margin-left: calc(50% - 800px)

  .navbar
    background: url("/header-bg-grn-full.svg") top center no-repeat, url("/header-bg-blu-full.svg") top center no-repeat #09264A
    background-size: 3000px, 3000px

  .theme-default-content:not(.custom)
    margin: 0 0 0 calc(calc(50% - 960px) + 20rem)

  .dropdown-wrapper .nav-dropdown .dropdown-item a
    color: #2c3e50

  .sidebar h3.version
    padding:1rem 1.35rem

.search-box
  margin-right: 0

.home .hero .action-button
  background: #5ab552
  border-bottom: none

  &:hover
    color: #FFFFFF !important

.home .hero .description
  font-weight: 300
  max-width: 55rem
  font-size: 1.5rem

